RESOLVED FIXED115229
[sh4] JavaScriptCore JIT build is broken for sh4 arch since r149159
https://bugs.webkit.org/show_bug.cgi?id=115229
Summary [sh4] JavaScriptCore JIT build is broken for sh4 arch since r149159
Julien Brianceau
Reported 2013-04-26 00:05:11 PDT
See SH4 bot: http://build.webkit.org/builders/Qt%20Linux%20SH4%20Release/builds/24976 /local/wkit/slavebuildbot_LOCAL/workspace_LOCAL/qt-linux-sh4-release/build/Source/JavaScriptCore/jit/ThunkGenerators.cpp: In function 'JSC::MacroAssemblerCodeRef JSC::imulThunkGenerator(JSC::VM*)': /local/wkit/slavebuildbot_LOCAL/workspace_LOCAL/qt-linux-sh4-release/build/Source/JavaScriptCore/jit/ThunkGenerators.cpp:786:99: error: 'BranchIfTruncateSuccessful' is not a member of 'JSC::SpecializedThunkJIT' /local/wkit/slavebuildbot_LOCAL/workspace_LOCAL/qt-linux-sh4-release/build/Source/JavaScriptCore/jit/ThunkGenerators.cpp:795:99: error: 'BranchIfTruncateSuccessful' is not a member of 'JSC::SpecializedThunkJIT' make[3]: *** [.obj/release-shared/jit/ThunkGenerators.o] Error 1 make[3]: *** Waiting for unfinished jobs.... make[3]: Leaving directory `/local/wkit/slavebuildbot_LOCAL/workspace_LOCAL/qt-linux-sh4-release/build/WebKitBuild/Release/Source/JavaScriptCore' I'll submit a patch soon
Attachments
Add BranchTruncateType enum in SH4 port (2.11 KB, patch)
2013-04-26 01:01 PDT, Julien Brianceau
no flags
Julien Brianceau
Comment 1 2013-04-26 01:01:23 PDT
Created attachment 199794 [details] Add BranchTruncateType enum in SH4 port I've declared the "enum BranchTruncateType" in MacroAssemblerSH4.h, like it is done in MacroAssemblerARM.h, MacroAssemblerARMv7.h, MacroAssemblerMIPS.h and MacroAssemblerX86Common.h Perhaps we could remove all these declarations from MacroAssemblerxxx.h and put it one single declaration in MacroAssembler.h ?
WebKit Commit Bot
Comment 2 2013-04-26 02:35:34 PDT
Comment on attachment 199794 [details] Add BranchTruncateType enum in SH4 port Clearing flags on attachment: 199794 Committed r149172: <http://trac.webkit.org/changeset/149172>
WebKit Commit Bot
Comment 3 2013-04-26 02:35:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.