Fix SH4 build broken since r149159. https://bugs.webkit.org/show_bug.cgi?id=115229

Add BranchTruncateType enum in SH4 port and handle it in branchTruncateDoubleToInt32.

Patch by Julien Brianceau <jbrianceau@nds.com> on 2013-04-26
Reviewed by Allan Sandfeld Jensen.

* assembler/MacroAssemblerSH4.h:
(JSC::MacroAssemblerSH4::branchTruncateDoubleToInt32):

Canonical link: https://commits.webkit.org/133668@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149172 268f45cc-cd09-0410-ab3c-d52691b4dbfc